# standalone-django-orm

./: .gitignore  Pipfile  README.md  pyproject.toml  setup.sh
django_orm/: __init__.py  init_django.py  manage.py
django_orm/db/: models.py
